--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   firebase_core: ^3.6.0
   firebase_database: ^11.1.4
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
