--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   firebase_core: ^3.6.0
   firebase_database: ^11.1.4
   http: ^1.2.2
+  flutter_local_notifications: ^18.0.1
+  firebase_messaging: ^15.1.5
+  firebase_analytics: ^11.3.5
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
