Data page feature

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,10 @@ dependencies:
   firebase_auth: ^5.3.3
   google_sign_in: ^6.2.2
   cloud_firestore: ^5.5.0
+  intl: ^0.19.0
+  path_provider: ^2.1.5
+  share: ^2.0.4
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
