--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   path_provider: ^2.1.5
   share: ^2.0.4
   permission_handler: ^11.3.1
+  shared_preferences: ^2.3.3
+  flutter_secure_storage: ^9.2.2
 
 dev_dependencies:
   flutter_test:
