--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,10 +17,11 @@ dependencies:
   cloud_firestore: ^5.5.0
   intl: ^0.19.0
   path_provider: ^2.1.5
-  share: ^2.0.4
   permission_handler: ^11.3.1
   shared_preferences: ^2.3.3
   flutter_secure_storage: ^9.2.2
+  curved_navigation_bar: ^1.0.0
+  share_plus: ^10.1.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
