--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,10 +22,18 @@ dependencies:
   flutter_secure_storage: ^9.2.2
   curved_navigation_bar: ^1.0.0
   share_plus: ^10.1.2
+  icons_launcher: ^3.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
+icons_launcher:
+  image_path: "images/icon.png"
+  platforms:
+    android:
+      enable: true
+    ios:
+      enable: true
 flutter:
   uses-material-design: true
   assets:
