--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,6 +1,7 @@
 analyzer:
   errors:
     avoid_print: ignore
+    deprecated_member_use: ignore
     library_private_types_in_public_api: ignore
     unnecessary_string_interpolations: ignore
     use_build_context_synchronously: ignore
