--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/> <!-- Optional, if you need to read files -->
 
     <application
-        android:label="monitoring"
+        android:label="Tambak App"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
