--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -6,6 +6,7 @@ analyzer:
     unnecessary_string_interpolations: ignore
     use_build_context_synchronously: ignore
     use_key_in_widget_constructors: ignore
+    use_super_parameters: ignore
 include: package:flutter_lints/flutter.yaml
 
 linter:
