--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -3,6 +3,7 @@ analyzer:
     avoid_print: ignore
     deprecated_member_use: ignore
     library_private_types_in_public_api: ignore
+    prefer_const_constructors: ignore
     unnecessary_string_interpolations: ignore
     use_build_context_synchronously: ignore
     use_key_in_widget_constructors: ignore
