--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: monitoring
 description: "A new Flutter project."
-version: 1.1.0+1
+version: 1.1.1+1
 environment:
   sdk: ">=3.4.1 <4.0.0"
 dependencies:
@@ -23,6 +23,7 @@ dependencies:
   curved_navigation_bar: ^1.0.0
   share_plus: ^10.1.2
   icons_launcher: ^3.0.0
+  fl_chart: ^0.69.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
