--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: monitoring
 description: "A new Flutter project."
-version: 1.1.2+1
+version: 1.1.3+1
 environment:
   sdk: ">=3.4.1 <4.0.0"
 dependencies:
@@ -36,6 +36,14 @@ icons_launcher:
     ios:
       enable: true
 flutter:
+  fonts:
+    - family: Roboto
+      fonts:
+        - asset: assets/fonts/Roboto-Regular.ttf
+        - asset: assets/fonts/Roboto-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/Roboto-Black.ttf
+          weight: 900
   uses-material-design: true
   assets:
     - images/udang.png
