--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: monitoring
 description: "A new Flutter project."
-version: 1.1.3+1
+version: 1.1.4+1
 environment:
   sdk: ">=3.4.1 <4.0.0"
 dependencies:
@@ -24,6 +24,8 @@ dependencies:
   share_plus: ^10.1.2
   icons_launcher: ^3.0.0
   fl_chart: ^0.69.2
+  flutter_local_notifications: ^18.0.1
+  font_awesome_flutter: ^10.8.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
